--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,16 @@
 			<groupId>top.onceio</groupId>
 			<artifactId>onceio-vertx</artifactId>
 			<version>1.0.0</version>
+		</dependency>		
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>druid</artifactId>
+			<version>1.1.3</version>
 		</dependency>
 		<dependency>
-			<groupId>postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>9.4.1208-jdbc42-atlassian-hosted</version>
+		    <groupId>org.postgresql</groupId>
+    		<artifactId>postgresql</artifactId>
+    		<version>9.4.1212</version>
 		</dependency>
 	</dependencies>
 </project>
