--- a/src/main/java/conf/config.json
+++ b/src/main/java/conf/config.json
@@ -4,7 +4,7 @@
 		"javax.sql.DataSource" : {
 			"@TYPE" : "com.alibaba.druid.pool.DruidDataSource",
 			"driver" : "org.postgresql.Driver",
-			"url" : "jdbc:postgresql://localhost/testdb",
+			"url" : "jdbc:postgresql://dbserver/testdb",
 			"username" : "postgres",
 			"password" : "postgres",
 			"initialSize":"5",
