--- a/pom.xml
+++ b/pom.xml
@@ -89,5 +89,10 @@
     		<artifactId>postgresql</artifactId>
     		<version>9.4.1212</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.alipay.sdk</groupId>
+    		<artifactId>alipay-sdk-java</artifactId>
+    		<version>3.1.0</version>
+		</dependency>
 	</dependencies>
 </project>
