成功加入微博登录

--- a/pom.xml
+++ b/pom.xml
@@ -94,5 +94,10 @@
     		<artifactId>alipay-sdk-java</artifactId>
     		<version>3.1.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpclient</artifactId>
+		    <version>4.5.5</version>
+		</dependency>
 	</dependencies>
 </project>
